add error handling

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URL=mongodb+srv://pavan:pavan@bootcamp.ujqaw.mongodb.net/bootcampDB?retryWrites=true&w=majority
+MONGODB_URL=mongodb+srv://Devlina:21-08-2001@bootcamp.bfjky.mongodb.net/bootcampDB?retryWrites=true&w=majority
