add error handling

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URL=mongodb+srv://devlina:devlina@bootcamp.ujqaw.mongodb.net/bootcampDB?retryWrites=true&w=majority
+MONGODB_URL=mongodb+srv://devlina:devlina@bootcamp.bfjky.mongodb.net/bootcampDB?retryWrites=true&w=majority
 
